@@ -1,5 +1,6 @@
 #define mpn_toomN_sqr mpn_toom6_sqr
 #define mpn_toomN_sqr_itch mpn_toom6_sqr_itch
 #define MIN_AN MAX(SQR_TOOM6_THRESHOLD,MPN_TOOM6_SQR_MINSIZE)
+#define MAX_AN SQR_TOOM8_THRESHOLD
 
 #include "toom-sqr-shared.h"
